hphp/hack/test/typecheck/condition_isset_member_call.php.exp
File "condition_isset_member_call.php", line 22, characters 14-21:
Invalid return type (Typing[4110])
File "condition_isset_member_call.php", line 19, characters 26-28:
Expected int
File "condition_isset_member_call.php", line 13, characters 11-14:
But got ?int
File "condition_isset_member_call.php", line 21, characters 7-20:
All the local information about $this->x has been invalidated during this call.
This is a limitation of the type-checker, use a local if that's the problem.
